--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -4,6 +4,7 @@ section {
   @include sizeStyle($h: auto, $w: 100%);
   @include dFlex($jc: flex-start, $fd: column, $g: 24px);
   @include padding($p: 90px 0 36px 0);
+   max-width: unset !important;
 }
 
 h1 {
@@ -14,6 +15,13 @@ h2 {
   width: 90%;
   @include textStyle($ff: "Syne", $fw: 800, $fst: bold, $fs: 1.5rem);
 }
+
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 5rem !important;
+  }
+}
+
 
 @media screen and (max-width: 1200px) {
   h1 {
