--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,14 +69,13 @@ button {
   }
 }
 
-section{
+section {
   scroll-margin-top: 140px;
   max-width: 1920px;
   width: 90%;
 }
 
-
-footer{
+footer {
   max-width: 1920px;
   width: 100%;
 }
@@ -90,8 +89,8 @@ h1 {
   @include textStyle($ff: "Syne", $fw: 800, $fst: bold, $fs: 8rem);
 }
 
-
-.title, h2 {
+.title,
+h2 {
   @include title();
 }
 
@@ -115,6 +114,7 @@ h1 {
 .paragraph {
   width: 90%;
   text-align: justify;
+  max-width: 1920px;
 }
 
 @media screen and (min-width: 1920px) {
@@ -122,7 +122,6 @@ h1 {
     font-size: 12rem !important;
   }
 }
-
 
 @media screen and (max-width: 1200px) {
   h1 {
